--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,18 +5,18 @@
 #db.driver=oracle.jdbc.driver.OracleDriver
 db.driver=com.mysql.jdbc.Driver
 #db.url=jdbc:oracle:thin:@localhost:1521:ORCL
-db.url=jdbc:mysql://localhost:3306/YKTDB
+db.url=jdbc:mysql://localhost:3306/quark
 
 #db.url=jdbc:oracle:thin:@localhost:1521:ORCL
 
 #compsd/compsd
 db.username=root
-db.password=123
+db.password=1234
 
 
 #db.username=mcmcc
 #db.password=mcmcc
-db.default_schema=YKTDB
+db.default_schema=quark
  	
 #c3p0
 minimun.pool.size=2
