--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<defaultGoal>compile</defaultGoal>
 	</build>
 	<dependencies>
 		<dependency>
@@ -100,6 +99,31 @@
         	<version>4.2.3.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework</groupId>
+        	<artifactId>spring-aop</artifactId>
+        	<version>4.2.3.RELEASE</version>
+		</dependency>
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-web</artifactId>
+        	<version>4.0.3.RELEASE</version>
+    	</dependency>
+    	<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.0.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+        	<artifactId>spring-context-support</artifactId>
+        	<version>4.2.3.RELEASE</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.2.2</version>
+		</dependency>
+		<dependency>
    			<groupId>org.hibernate</groupId>
    			<artifactId>hibernate-core</artifactId>
    			<version>5.0.4.Final</version>
@@ -109,11 +133,21 @@
 		    <artifactId>hibernate-ehcache</artifactId>
 		    <version>5.0.5.Final</version>
 		</dependency>
+    	<dependency>
+		  <groupId>org.apache.struts</groupId>
+		  <artifactId>struts2-core</artifactId>
+		  <version>2.3.24.1</version>
+		</dependency>
 		<dependency>
-        	<groupId>org.springframework.security</groupId>
-        	<artifactId>spring-security-web</artifactId>
-        	<version>4.0.3.RELEASE</version>
-    	</dependency>
+	       <groupId>org.apache.struts</groupId>
+	       <artifactId>struts2-json-plugin</artifactId>
+	       <version>2.3.24.1</version>
+	   	</dependency>
+	   	<dependency>
+	       <groupId>org.apache.struts</groupId>
+	       <artifactId>struts2-spring-plugin</artifactId>
+	       <version>2.3.24.1</version>
+	   	</dependency>
     	<dependency>
 			<groupId>commons-beanutils</groupId>
         	<artifactId>commons-beanutils</artifactId>
@@ -133,6 +167,46 @@
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.directwebremoting</groupId>
+		    <artifactId>dwr</artifactId>
+		    <version>3.0.1-RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		<dependency>  
+			<groupId>org.slf4j</groupId>  
+			<artifactId>slf4j-api</artifactId>  
+			<version>1.7.13</version>   
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>1.8.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.6</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
 		</dependency>
 	</dependencies>
 </project>
