--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -17,7 +17,8 @@ db.password=1234
 #db.username=mcmcc
 #db.password=mcmcc
 db.default_schema=quark
- 	
+#init data : dbunit
+db.dbunit.dbtype=Mysql
 #c3p0
 minimun.pool.size=2
 maximum.pool.size=5
