--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,15 +17,7 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>*.action</url-pattern>
 	</filter-mapping>
-	<!-- hibernate session view -->
-	<filter>
-		<filter-name>hibernateFilter</filter-name>
-		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>hibernateFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	
 	
 	<!-- config:spring security config -->
 	<filter>
@@ -48,6 +40,15 @@
         <dispatcher>REQUEST</dispatcher>
      	<dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+    <!-- hibernate session view -->
+	<filter>
+		<filter-name>hibernateFilter</filter-name>
+		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>hibernateFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
     <!-- 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -85,7 +86,7 @@
     <jsp-config>
     	<taglib>
     		<taglib-uri>http://www.quark.org</taglib-uri>
-    		<taglib-location>/WEB-INF/classes/META-INF/quark.tld</taglib-location>
+    		<taglib-location>/WEB-INF/tld/quark.tld</taglib-location>
     	</taglib>
     	<taglib>
     		<taglib-uri>http://java.sun.com/jsp/jstl/core</taglib-uri>
