--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
-		<url-pattern>*.action</url-pattern>
+		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
 	
 	
@@ -28,8 +28,17 @@
   		<filter-name>springSecurityFilterChain</filter-name>
   		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<!-- struts2 config -->
+	<!-- spring webmvc -->
+	<servlet>
+        <servlet-name>springmvc</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>springmvc</servlet-name>
+        <url-pattern>*.do</url-pattern>
+    </servlet-mapping>
+    
+	<!-- struts2 config 
 	<filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
@@ -39,7 +48,7 @@
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
      	<dispatcher>FORWARD</dispatcher>
-    </filter-mapping>
+    </filter-mapping>-->
     <!-- hibernate session view -->
 	<filter>
 		<filter-name>hibernateFilter</filter-name>
@@ -66,7 +75,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath*:applicationContext.xml</param-value>
 	</context-param>
-	<!-- DWR CONFIG -->
+	<!-- DWR CONFIG 
 	<servlet>
 		<servlet-name>dwr</servlet-name>
 		<servlet-class>org.directwebremoting.spring.DwrSpringServlet</servlet-class>
@@ -79,6 +88,7 @@
 		<servlet-name>dwr</servlet-name>
 		<url-pattern>/dwr/*</url-pattern>
 	</servlet-mapping>
+	-->
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
         <welcome-file>index.jsp</welcome-file>
