--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -32,7 +32,13 @@ ds.pool.acquireRetryAttempts=30
 #db.dialect=org.hibernate.dialect.Oracle10gDialect
 db.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 db.show_sql=true
-db.use_query_cache=true
+db.format_sql=true
+db.use_sql_comments=true
+db.use_query_cache=false
+db.default_batch_fetch_size=16
+db.jdbc.fetch_size=30
+db.jdbc.batch_size=25
+db.jdbc.use_scrollable_resultset=false
 db.cache_provider_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
 db.session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 #db.tx_manager_lookup_class=org.hibernate.service.jta.platform.internal.NoJtaPlatform
