--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
   <artifactId>Quark</artifactId>
   <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- mybatis -->
+		<mybatis.version>3.4.0</mybatis.version>
+		<mybatis-spring.version>1.3.0</mybatis-spring.version>
+		
 		<skipTests>true</skipTests>
   </properties>
   <build>
@@ -82,41 +86,51 @@
 			</plugin>
 		</plugins>
 	</build>
-	<dependencies>
+	<dependencies> 
+		<dependency>
+			<groupId>org.glassfish</groupId>
+        	<artifactId>javax.transaction</artifactId>
+        	<version>3.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+        	<artifactId>spring-webmvc</artifactId>
+        	<version>4.2.5.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
         	<artifactId>spring-context</artifactId>
-        	<version>4.2.3.RELEASE</version>
+        	<version>4.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
         	<artifactId>spring-jdbc</artifactId>
-        	<version>4.2.3.RELEASE</version>
+        	<version>4.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
         	<artifactId>spring-orm</artifactId>
-        	<version>4.2.3.RELEASE</version>
+        	<version>4.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
         	<artifactId>spring-aop</artifactId>
-        	<version>4.2.3.RELEASE</version>
-		</dependency>
-		<dependency>
-        	<groupId>org.springframework.security</groupId>
-        	<artifactId>spring-security-web</artifactId>
-        	<version>4.0.3.RELEASE</version>
-    	</dependency>
-    	<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>4.0.3.RELEASE</version>
+        	<version>4.2.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
         	<artifactId>spring-context-support</artifactId>
-        	<version>4.2.3.RELEASE</version>
+        	<version>4.2.5.RELEASE</version>
+		</dependency>
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-web</artifactId>
+        	<version>4.0.4.RELEASE</version>
+    	</dependency>
+    	<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>4.0.4.RELEASE</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.quartz-scheduler</groupId>
@@ -133,6 +147,21 @@
 		    <artifactId>hibernate-ehcache</artifactId>
 		    <version>5.0.5.Final</version>
 		</dependency>
+		
+		<!-- PERSISTENCE begin -->
+		<!--mybatis begin -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>${mybatis-spring.version}</version>
+		</dependency>
+		<!--mybatis end -->
+		<!-- 
     	<dependency>
 		  <groupId>org.apache.struts</groupId>
 		  <artifactId>struts2-core</artifactId>
@@ -148,6 +177,7 @@
 	       <artifactId>struts2-spring-plugin</artifactId>
 	       <version>2.3.24.1</version>
 	   	</dependency>
+	   	 -->
     	<dependency>
 			<groupId>commons-beanutils</groupId>
         	<artifactId>commons-beanutils</artifactId>
@@ -168,6 +198,7 @@
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
 		</dependency>
+		<!-- dwr -->
 		<dependency>
 		    <groupId>org.directwebremoting</groupId>
 		    <artifactId>dwr</artifactId>
@@ -203,15 +234,31 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		<dependency>
+		<!--  <dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
 			<version>1.1.2</version>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.35</version>
+		</dependency>
+		<!-- spring mvc is jackson -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.6.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-annotations</artifactId>
+		    <version>2.6.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.6.0</version>
 		</dependency>
 	</dependencies>
 </project>
