--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
 	<servlet>
         <servlet-name>springmvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>  
+            <param-name>contextConfigLocation</param-name>  
+            <param-value>classpath*:spring-mvc.xml</param-value>  
+        </init-param>
     </servlet>
     <servlet-mapping>
         <servlet-name>springmvc</servlet-name>
@@ -77,7 +81,7 @@
     <!-- Uncomment/comment this if you need/don't need Spring support -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:applicationContext.xml</param-value>
+		<param-value>classpath*:spring-context.xml</param-value>
 	</context-param>
 	<!-- DWR CONFIG 
 	<servlet>
