--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,13 @@
 	    <url-pattern>*.jpg</url-pattern>
 	    <url-pattern>*.gif</url-pattern>
 	    <url-pattern>*.png</url-pattern>
+	    <url-pattern>*.woff</url-pattern>
+	    <url-pattern>*.woff2</url-pattern>
+	    <url-pattern>*.ttf</url-pattern>
+	    <url-pattern>*.map</url-pattern>
   	</servlet-mapping>
+    
+    
 	<!-- config:request encode -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
