--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 				<version>2.5</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<excludeResources>true</excludeResources>
+					<!--<excludeResources>true</excludeResources>-->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -76,10 +76,10 @@
 						<manifestEntries>
 							<Specification-Title>${project.name}</Specification-Title>
 							<Specification-Version>${project.version}</Specification-Version>
-							<Svn-Revision>${SVN_REVISION}</Svn-Revision>
+							<!--<Svn-Revision>${SVN_REVISION}</Svn-Revision>
 							<Build-Tag>${BUILD_TAG}</Build-Tag>
 							<Build-Number>${BUILD_NUMBER}</Build-Number>
-							<Build-Id>${BUILD_ID}</Build-Id>
+							<Build-Id>${BUILD_ID}</Build-Id>-->
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -260,5 +260,20 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.6.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jsp-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 </project>
