--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,13 +5,13 @@
 #db.driver=oracle.jdbc.driver.OracleDriver
 db.driver=com.mysql.jdbc.Driver
 #db.url=jdbc:oracle:thin:@localhost:1521:ORCL
-db.url=jdbc:mysql://localhost:3306/quark
+db.url=jdbc:mysql://10.19.1.74:3306/quark
 
 #db.url=jdbc:oracle:thin:@localhost:1521:ORCL
 
 #compsd/compsd
-db.username=root
-db.password=1234
+db.username=hive
+db.password=hive
 
 
 #db.username=mcmcc
